--- a/client/index.html
+++ b/client/index.html
@@ -13,11 +13,15 @@
   <div id="app">
     <div id="chat_container"></div>
       <form>
-        <textarea name="prompt" rows="4" cols="1" placeholder="Ask anything..."></textarea>
+        <textarea name="prompt" rows="2" cols="1" placeholder="Ask anything..."></textarea>
         <button type="submit">
           <img src="assets/send.svg" alt="send message">
         </button>
       </form>
+      <footer class="footer">
+        <br>
+        Created by <a href="https://www.facebook.com/n0name.gov.ph">Austine Luise</a>
+      </footer>
   </div>
   <script type="module" src="/script.js"></script>
 </body>
