--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
       </form>
       <footer class="footer">
         <br>
-        Created by <a href="https://www.facebook.com/n0name.gov.ph">Austine Luise</a>
+        Created by <a href="https://www.facebook.com/profile.php?id=100090014544294">Austine Luise</a>
       </footer>
   </div>
   <script type="module" src="/script.js"></script>
